tests/spec/compile-pass/028_box_send_interface_thread.zn
// category: compile-pass
// profile: hosted
// purpose: Box<ThreadInterface> preserves the ability to move an erased object across threads

module tests.pass.boxSendInterfaceThread;

import core.alloc.{AllocError, GlobalAllocator};
import core.result.{Result, Ok};
import std.thread.Thread;

interface Identified {
    fn id(self) -> U32;
}

interface ThreadIdentified: Identified, Send {}

struct Service: Copy {
    idValue: U32,
}

impl Identified for Service {
    fn id(self) -> U32 {
        return self.idValue;
    }
}

impl ThreadIdentified for Service {}

fn makeService(mut allocator: GlobalAllocator) -> Box<ThreadIdentified> {
    val service = Service { idValue: 9 };
    return Box.newIn(move service, mut allocator);
}

fn main(mut allocator: GlobalAllocator) -> Result<Unit, AllocError> {
    val service = makeService(mut allocator);
    val handle = try Thread.spawn(move () -> U32 {
        return service.id();
    });
    val ignored = try move handle.join();
    return Ok(());
}
